Attempt to fix unexpected svg padding on mobile screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ footer {
 
 .flower {
   width: 12%;
-  height: auto;
+  height: 1%;
   margin: 0 5%;
 }
 
